grammar/pl11.ebnf
% PL-11 Formal Grammar — EBNF Notation
% UNH dialect (Dr. Robert Russell, University of New Hampshire)
%
% Conventions:
%   { x }   — zero or more repetitions of x
%   [ x ]   — x is optional (zero or one)
%   ( x | y ) — x or y (alternation)
%   'kwd'  — terminal keyword (case-insensitive)
%   UPPER  — non-terminal symbol
%   lower  — lexical token

% ============================================================
% Top-Level Program
% ============================================================

program         ::= block .

% ============================================================
% Blocks
% ============================================================

block           ::= 'BEGIN' decl_section stmt_list 'END' .

decl_section    ::= { declaration ';' } .

stmt_list       ::= { statement ';' } [ statement ] .

% ============================================================
% Declarations
% ============================================================

declaration     ::= var_decl
                  | array_decl
                  | const_decl
                  | proc_decl
                  | forward_decl .

var_decl        ::= type_spec var_declarator { ',' var_declarator } .

var_declarator  ::= identifier [ '(' dim_list ')' ] .

% UNH array declaration: ARRAY size[, size ...] type name[, name ...]
array_decl      ::= 'ARRAY' integer_literal { ',' integer_literal }
                    type_spec identifier { ',' identifier } .

dim_list        ::= expression { ',' expression } .

type_spec       ::= 'BYTE'                           % 8-bit signed integer
                  | 'WORD'                           % 16-bit signed integer
                  | 'LONG'                           % 32-bit signed integer
                  | 'INTEGER'                        % alias for WORD
                  | 'REAL'    [ '*' integer_literal ]
                  | 'CHARACTER' [ '*' integer_literal ]
                  | 'BIT'    [ '*' integer_literal ] .

const_decl      ::= 'CONSTANT' type_spec identifier '=' literal .

proc_decl       ::= [ type_spec ] 'PROCEDURE' identifier
                    [ '(' param_list ')' ] ';'
                    block ';' .

forward_decl    ::= 'PROCEDURE' 'FORWARD' identifier ';' .

param_list      ::= param_decl { ';' param_decl } .

param_decl      ::= param_mode type_spec identifier { ',' identifier } .

param_mode      ::= 'IN' 'OUT'
                  | 'IN'
                  | 'OUT'
                  | .              % empty — defaults to IN

% ============================================================
% Statements
% ============================================================

statement       ::= assignment
                  | if_stmt
                  | while_stmt
                  | for_stmt
                  | do_stmt
                  | repeat_stmt
                  | case_stmt
                  | proc_call_stmt
                  | return_stmt
                  | goto_stmt
                  | label_stmt
                  | asm_stmt
                  | print_stmt
                  | push_stmt
                  | pop_stmt
                  | block .

assignment      ::= expression '=>' variable .    % value => target

if_stmt         ::= 'IF' expression 'THEN' statement
                    [ 'ELSE' statement ] .

while_stmt      ::= 'WHILE' expression 'DO' statement [ 'UNTIL' expression ] .

for_stmt        ::= 'FOR' identifier for_init
                    ( 'TO' | 'DOWNTO' ) expression
                    'DO' statement [ 'UNTIL' expression ] .

% for_init controls how (and whether) the loop variable is initialised:
%   'FROM' form — explicit start value with optional step
%   step-only   — no initialisation, loop begins at variable's current value
%   empty       — no initialisation, default step ±1
for_init        ::= 'FROM' expression [ 'STEP' expression ]         % with start
                  | 'STEP' expression                               % current value, explicit step
                  | .                                               % current value, default step

do_stmt         ::= 'DO' ( ';' | statement ) [ 'UNTIL' expression ] .

repeat_stmt     ::= 'REPEAT' stmt_list 'UNTIL' expression .

case_stmt       ::= 'CASE' expression 'OF'
                    { case_arm }
                    'END' .

case_arm        ::= integer_literal ':' statement ';' .

proc_call_stmt  ::= 'CALL' identifier [ '(' arg_list ')' ] .

return_stmt     ::= 'RETURN' [ '(' expression ')' ] .

goto_stmt       ::= 'GOTO' identifier .

label_stmt      ::= identifier ':' statement .

asm_stmt        ::= 'ASM' '(' string_literal ')' .

% PUSH / POP — PDP-11 stack operations (UNH extension)
%   PUSH decrements SP by 2 then stores the value at the new SP.
%   POP  loads a value from SP then increments SP by 2.
push_stmt       ::= 'PUSH' expression .
pop_stmt        ::= 'POP'  variable .

% PRINT: built-in formatted console output (maps to C printf)
% Format specifiers: %d  WORD/BYTE   signed decimal
%                    %l  LONG        signed decimal
%                    %f  REAL        floating-point
%                    %c  BYTE/WORD   character
%                    %s  CHARACTER   string
%                    %%              literal percent sign
print_stmt      ::= 'PRINT' '(' string_literal { ',' expression } ')' .

arg_list        ::= expression { ',' expression } .

% ============================================================
% Expressions
% ============================================================

% Operator precedence (lowest to highest binding):
%   Level 4 (lowest):  relational  =  /=  <  >  <=  >=
%   Level 3:           additive    +  -  OR  XOR
%   Level 2:           multiplicative  *  /  MOD  AND  SHL  SHR  SHRA
%   Level 1 (highest): unary       -  NOT

expression      ::= rel_expr .

rel_expr        ::= add_expr { rel_op add_expr } .

add_expr        ::= mul_expr { add_op mul_expr } .

mul_expr        ::= unary_expr { mul_op unary_expr } .

unary_expr      ::= '-' unary_expr
                  | 'NOT' unary_expr
                  | postfix_expr .

postfix_expr    ::= primary_expr { postfix_op } .

postfix_op      ::= '^'                              % dereference
                  | '(' arg_list ')'                 % function call / array index
                  .

primary_expr    ::= literal
                  | variable
                  | '@' variable                     % address-of
                  | function_call
                  | '(' expression ')' .

function_call   ::= identifier '(' arg_list ')' .

variable        ::= identifier [ '(' index_list ')' ]    % array element
                  | variable '^'                          % dereferenced pointer
                  | register_name .                       % hardware register

index_list      ::= expression { ',' expression } .

% ============================================================
% Operators
% ============================================================

rel_op          ::= '=' | '/=' | '<' | '>' | '<=' | '>=' .

add_op          ::= '+' | '-' | 'OR' | 'XOR' .

mul_op          ::= '*' | '/' | 'MOD' | 'AND' | 'SHL' | 'SHR' | 'SHRA' .

% ============================================================
% Literals
% ============================================================

literal         ::= integer_literal
                  | real_literal
                  | string_literal
                  | bit_literal
                  | address_literal .

integer_literal ::= decimal_literal | octal_literal | hex_literal .

decimal_literal ::= [ '-' ] digit { digit } .

octal_literal   ::= '0' octal_digit { octal_digit } .

hex_literal     ::= '#' hex_digit { hex_digit } .

real_literal    ::= [ '-' ] digit { digit } '.' { digit }
                    [ ('E' | 'e') [ '+' | '-' ] digit { digit } ] .

string_literal  ::= "'" { any_char_except_quote } "'" .

bit_literal     ::= "'" { '0' | '1' } "'" 'B' .

address_literal ::= octal_literal 'B' .

% ============================================================
% Reserved Words
% (INTEGER remains as an alias for WORD)
% ============================================================
%
%    AND   ASM     BEGIN  BIT    BYTE   CALL   CASE   CHARACTER
%    CONSTANT  DO  DOWNTO ELSE   END    FOR    FORWARD GOTO
%    IF    IN      LONG   MOD    NOT    OF     OR     OUT
%    PROCEDURE REAL REPEAT RETURN SHL   SHR    SHRA   SP
%    THEN  TO     UNTIL  WHILE  WORD   XOR

% ============================================================
% Lexical Tokens
% ============================================================

identifier      ::= letter { letter | digit | '_' } .

register_name   ::= 'R' digit [ digit ]              % R0..R15
                  | 'SP'
                  | 'PC' .

letter          ::= 'A' | 'B' | ... | 'Z' | 'a' | 'b' | ... | 'z' .

digit           ::= '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9' .

octal_digit     ::= '0' | '1' | '2' | '3' | '4' | '5' | '6' | '7' .

hex_digit       ::= digit | 'A' | 'B' | 'C' | 'D' | 'E' | 'F'
                          | 'a' | 'b' | 'c' | 'd' | 'e' | 'f' .

% ============================================================
% Reserved Words
% (All keywords including UNH extensions)
% ============================================================
%
%    AND   ARRAY   ASM    BEGIN   BIT     BYTE    CALL    CASE
%    CHARACTER     COMMENT        CONSTANT        DO      DOWNTO
%    ELSE  END     FLOAT   FOR    FORWARD  FROM   GOTO   IF
%    IN    INTEGER  LONG   MOD    NOT     OF      OR      OUT
%    PC    PRINT   PROCEDURE      REAL    REPEAT  RETURN  SHL
%    SHR   SHRA   SP     STEP    THEN    TO      UNTIL   WHILE   WORD  XOR
%
%    INTEGER is an alias for WORD; FLOAT is an alias for REAL.
%    SP and PC are reserved register aliases.
%    COMMENT is a reserved word that introduces a keyword comment.

% ============================================================
% Comments (not captured in grammar — handled by lexer)
% ============================================================
%   Form 1: % ...         — line comment; extends to end of line
%           (% inside a string literal is not a comment)
%   Form 2: COMMENT ... ; — keyword comment; extends to next ;
%   Keywords and identifiers are case-insensitive.
